--- a/IEEE_EMB/IEEE_EMB/Pages/Admin/AddAdmin.cshtml
+++ b/IEEE_EMB/IEEE_EMB/Pages/Admin/AddAdmin.cshtml
@@ -14,7 +14,7 @@
 
     <div class="card">
         <div class="card-body">
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 <!-- Name -->
                 <div class="form-group">
                     <label for="Name" class="control-label">Name</label>
@@ -31,11 +31,7 @@
                     <input asp-for="@Model.admin.Email" type="email" class="form-control" />
                 </div>
                 
-                <div class="form-group">
-                    <label for="University" class="control-label">University</label>
-                    <input asp-for="@Model.admin.University" type="text" class="form-control" />
-                </div>
-
+               
                 <!-- Password -->
                 <div class="form-group">
                     <label for="Password" class="control-label">Password</label>
@@ -51,8 +47,9 @@
                 <!-- CV -->
                 <div class="form-group">
                     <label for="CV" class="control-label">CV</label>
-                    <input asp-for="@Model.admin.CV" type="file" class="form-control" />
+                    <input id="CV" type="file" name="CV" class="form-control" />
                 </div>
+
 
                 <!-- Phone Number -->
                 <div class="form-group">
